syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string sessionId = 2;
  google.protobuf.Timestamp accessTokenExpiresAt = 3;
  google.protobuf.Timestamp refreshTokenExpiresAt = 4;
}